Purge Auto feature in Celadon
Different with AUTO, Celadon doesn't have IOC and it relied on RTC to
wake from S3.

Tracked-On: OAM-80917
Signed-off-by: Chen, Hu <hu1.chen@intel.com>

--- a/kernel_config/kernel_64_defconfig
+++ b/kernel_config/kernel_64_defconfig
@@ -82,7 +82,7 @@ CONFIG_NO_HZ_IDLE=y
 # CONFIG_NO_HZ_FULL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_ANDROID_AUTO_SUSPEND_BEHAVIOR=y
+# CONFIG_ANDROID_AUTO_SUSPEND_BEHAVIOR is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
